syntax = "proto2";

package yamcs.protobuf.web;

option java_package = "org.yamcs.protobuf";
option java_outer_classname = "GeneralServiceProto";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

import "yamcs/api/annotations.proto";

// Handles incoming requests related to api routes
service GeneralApi {

  // Get general info
  rpc GetGeneralInfo(google.protobuf.Empty) returns (GetGeneralInfoResponse) {
    option (yamcs.api.route) = {
      get: "/api"
    };
  }

  // List routes
  rpc ListRoutes(google.protobuf.Empty) returns (ListRoutesResponse) {
    option (yamcs.api.route) = {
      get: "/api/routes"
    };
  }
}

message ListRoutesResponse {
  repeated RouteInfo routes = 1;
}

message RouteInfo {
  optional string service = 1;
  optional string method = 2;
  optional string description = 3;
  optional string httpMethod = 4;
  optional string url = 5;
  optional string inputType = 6;
  optional string outputType = 7;
  optional bool deprecated = 8;
  optional int64 requestCount = 9;
  optional int64 errorCount = 10;
}

message GetGeneralInfoResponse {
  message PluginInfo {
    optional string name = 1;
    optional string description = 2;
    optional string version = 3;
    optional string vendor = 4;
  }
  optional string yamcsVersion = 1;
  optional string revision = 6;
  optional string serverId = 2;
  optional string defaultYamcsInstance = 3;
  repeated PluginInfo plugins = 5;
}
